 * Filter out duplicate sstables when performing snapshots to avoid
   duplicate hardlink errors (APOLLO-290)
 * Prevent duplicate SyncUtil.force() in SeqentialWriter on close (APOLLO-351)
 * Always die on AssertionError and log flush failure errors. (APOLLO-227)
 * Perform repair sync sequentially to avoid overloading coordinator (APOLLO-216)
Merged from 3.0.X
 * Abort or retry on failed hints delivery (CASSANDRA-13124)
 * Fix handling of partition with partition-level deletion plus
   live rows in sstabledump (CASSANDRA-13177)
 * Provide user workaround when system_schema.columns does not contain entries
   for a table that's in system_schema.tables (CASSANDRA-13180)
 * Dump threads when unit tests time out (CASSANDRA-13117)
 * Better error when modifying function permissions without explicit keyspace (CASSANDRA-12925)
 * Indexer is not correctly invoked when building indexes over sstables (CASSANDRA-13075)
 * Read repair is not blocking repair to finish in foreground repair (CASSANDRA-13115)
 * Stress daemon help is incorrect (CASSANDRA-12563)
 * Remove ALTER TYPE support (CASSANDRA-12443)
 * Fix assertion for certain legacy range tombstone pattern (CASSANDRA-12203)
 * Set javac encoding to utf-8 (CASSANDRA-11077)
 * Replace empty strings with null values if they cannot be converted (CASSANDRA-12794)
 * Fixed flacky SSTableRewriterTest: check file counts before calling validateCFS (CASSANDRA-12348)
 * Fix deserialization of 2.x DeletedCells (CASSANDRA-12620)
 * Add parent repair session id to anticompaction log message (CASSANDRA-12186)
 * Improve contention handling on failure to acquire MV lock for streaming and hints (CASSANDRA-12905)
 * Fix DELETE and UPDATE queries with empty IN restrictions (CASSANDRA-12829)
 * Mark MVs as built after successful bootstrap (CASSANDRA-12984)
Merged from 2.2:
 * Fix race causing infinite loop if Thrift server is stopped before it starts listening (CASSANDRA-12856)